#5822 Sitemap drop indicator News list flicker fix

--- a/src/webroot/cms/content-manager/sitemap/sitemap.css.less
+++ b/src/webroot/cms/content-manager/sitemap/sitemap.css.less
@@ -93,13 +93,13 @@
 	
 	background: url(images/tree-item-lines.png) -675px 0 no-repeat;
 	
-	&:first-child {
+	.new-item-fake-preview + & {
 		background-position: -185px 0;
 	}
 	&:last-child {
 		background-position: -1165px 0;
 	}
-	&:first-child:last-child {
+	.new-item-fake-preview + &:last-child {
 		background-position: -1655px 0;
 	}
 	
@@ -350,24 +350,26 @@
 	
 	/* Drag and drop marker */
 	&.marker-before > .su-tree-node-content .marker {
-		.border-radius (10px);
+		.border-radius (8px);
 		.box-shadow (0px, 18px, 18px, #000);
 		position: absolute;
-		width: 12px;
-		height: 12px;
-		background: #3A96EC;
-		left: -6px;
-		top: 64px;
+		width: 4px;
+		height: 94px;
+		border: 3px solid #3A96EC;
+		background: #33303D;
+		left: -5px;
+		top: 22px;
 	}
 	&.marker-after > .su-tree-node-content .marker {
-		.border-radius (10px);
+		.border-radius (8px);
 		.box-shadow (0px, 18px, 18px, #000);
 		position: absolute;
-		width: 12px;
-		height: 12px;
-		background: #3A96EC;
-		right: -6px;
-		top: 64px;
+		width: 4px;
+		height: 94px;
+		border: 3px solid #3A96EC;
+		background: #33303D;
+		right: -5px;
+		top: 22px;
 	}
 	&.marker-inside > .su-tree-node-content .marker {
 		position: absolute;
@@ -444,13 +446,13 @@
 		height: auto;
 		background-position: -490px 0;
 		
-		&:first-child {
+		.new-item-fake-preview + & {
 			background-position: 0 0;
 		}
 		&:last-child {
 			background-position: -980px 0;
 		}
-		&:first-child:last-child {
+		.new-item-fake-preview + &:last-child {
 			background-position: -1470px 0;
 		}
 		
@@ -479,7 +481,7 @@
 	&.expanded-list.marker-inside > .su-tree-node-content .marker {
 		.border-radius (6px);
 		
-		z-index: 2;
+		z-index: 3;
 		right: 10px;
 		bottom: 0;
 		width: auto;
@@ -493,6 +495,7 @@
 .su-tree-highlighted {
 	.su-tree-node .highlight {
 		position: absolute;
+		z-index: 2;
 		background: rgb(4, 0, 16);
 		opacity: 0.5;
 		border-radius: 8px;
@@ -531,6 +534,20 @@
 	& > .visibility-root {
 		visibility: visible;
 	}
+}
+
+/* Fake new item preview */
+.su-tree .new-item-fake-preview {
+	width: 205px;
+	height: 183px;
+	position: absolute;
+	right: -146px;
+	top: 0;
+	background: url(images/tree-item-new-last.png) 0 0 no-repeat;
+	display: none;
+}
+.su-tree-node.marker-inside > .children > .new-item-fake-preview {
+	display: block;
 }
 
 /**
